--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -10,6 +10,10 @@
     color: #05386b !important;
 }*/
 
-.lotusui30 .lotusTable h4 {
+.lotusui30 .lotusTable h4 a{
     color: #FF7010 !important;
+}
+
+.bidiAware {
+     color: #FF7010 !important;   
 }
