--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -1,24 +1,8 @@
-/*.lotusui30 a, .lotusui30 a:visited {
-    color: #FF7010;
-}
-
-.lotusui30 a:active, .lotusui30 a:focus, .lotusui30 a:hover {
-    color: #FF7010;
-}
-
-.lotusui30 a.lotusActiveSort a.lotusPerson {
-    color: #05386b !important;
-}*/
-
 .lotusui30 .lotusTable h4 a{
     color: #FF7010 !important;
     font-size: 1.6em !important;
 }
 
-/*.bidiAware {
-     color: #FF7010 !important;   
-}*/
-
-.hr-red {
-    color: #FF0000 !important;  
+.hr-color {
+    color: #EBEBEB !important;  
 }
