--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -3,6 +3,11 @@
     font-size: 1.4em !important;
 }
 
+.lotusui30 .lotusTable h4 {
+    color: #FF7010 !important;
+    font-size: 1.2em !important;
+}
+
 .hr-color {
     border-top: 2px solid #EBEBEB !important
 }
