--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -1,4 +1,4 @@
-// Sur la page blogs
+/* Sur la page blogs */
 .lotusui30 .lotusTable h4 a{
     color: #FF7010 !important;
     font-size: 1.2em !important;
@@ -8,7 +8,7 @@
     border-top: 2px solid #EBEBEB !important;
 }
 
-// Sur la page blog / entry
+/* Sur la page blog / entry */
 .lotusui30 .lotusTable h4 {
     color: #FF7010 !important;
     font-size: 1.2em !important;
