--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -1,11 +1,11 @@
 /* Sur la page blogs */
 .lotusui30 .lotusTable h4 a{
     color: #FF7010 !important;
-    font-size: 1.3em !important;
+    font-size: 1.2em !important;
 }
 
 .hr-color {
-    border-top: 1px solid #EBEBEB !important;
+    border-top: 1px solid #FEFEFE !important;
 }
 
 /* Sur la page blog / entry */
