--- a/Inklusif2/com.css
+++ b/Inklusif2/com.css
@@ -6,3 +6,7 @@
 .communities-widget-appearance .lotusui30 div:not(#profilePaneLeft):not(#profilePaneRight):not(#profileBody):not(#tabsWidget1_widgetId_container) > .lotusWidget2 .lotusTable h4 a {
     color: #FF7010 !important;
 }
+
+.communities-widget-appearance .lotusui30 div:not(#profilePaneLeft):not(#profilePaneRight):not(#profileBody):not(#tabsWidget1_widgetId_container) > .lotusWidget2 .lotusTable td {
+    font-size: 10px !important;
+}
