--- a/Inklusif2/com.css
+++ b/Inklusif2/com.css
@@ -14,3 +14,8 @@
 .communities-widget-appearance .lotusui30 .lotusWidget2 .galleryViewAllHint {
     color: #FF7010 !important;
 }
+
+/* Test */
+.hr-color {
+    border-top: 1px solid red !important;
+}
