--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -11,8 +11,11 @@
 }
 
 /* barre horizontale */
-.hr-color {
+/*.hr-color {
     border-top: 1px solid #FEFEFE !important;
+}*/
+.lotusui30_layout .lotusContent .lotusTable tr td.eventDiv, .lotusui30_layout .lotusContent .lotusTable tr td:first-child {
+    border-bottom: 1px solid #FEFEFE !important;
 }
 
 /* Blog entry : taille et couleur titre entrée */
