--- a/inklusif/blog.css
+++ b/inklusif/blog.css
@@ -16,6 +16,7 @@
 }*/
 .lotusui30_layout .lotusContent .lotusTable tr td.eventDiv, .lotusui30_layout .lotusContent .lotusTable tr td:first-child {
     border-bottom: 1px solid #FEFEFE !important;
+    width: 500px;
 }
 
 /* Blog entry : taille et couleur titre entrée */
