--- a/Inklusif2/com.css
+++ b/Inklusif2/com.css
@@ -5,17 +5,12 @@
     color: #FF7010 !important;
 }
 
-/* Taille font Blogs / Files */
+/* Taille font lien d'actions */
 .communities-widget-appearance .lotusui30 div:not(#profilePaneLeft):not(#profilePaneRight):not(#profileBody):not(#tabsWidget1_widgetId_container) > .lotusWidget2 a.lotusAction {
-    font-size: 10px !important;
+    font-size: 12px !important;
 }
 
 /* Afficher orange galerie */
 .communities-widget-appearance .lotusui30 .lotusWidget2 .galleryViewAllHint {
     color: #FF7010 !important;
-}
-
-/* Test */
-.hr-color {
-    border-top: 1px solid red !important;
 }
