--- a/inklusif/blog-inklusif.css
+++ b/inklusif/blog-inklusif.css
@@ -15,6 +15,7 @@
     border-bottom: 1px solid #EAEAEA !important;
     width: 500px;
     padding-bottom: 0px !important;
+    padding-top: 20px !important;
 }
 
 /* Blog entry : taille et couleur titre entrée */
