--- a/inklusif/blog-inklusif.css
+++ b/inklusif/blog-inklusif.css
@@ -21,5 +21,20 @@
 /* Blog entry : taille et couleur titre entrée */
 .lotusui30 .lotusTable h4 {
     color: #FF7010 !important;
-    font-size: 1.2em !important;
+    font-size: 18px !important;
+}
+
+/* Espace entre modifier et commentaires */
+.lotusui30 .lotusInlinelist {
+    margin-top: 30px !important;
+}
+
+/* Test element */
+élément {
+    border-top: 1px solid #EAEAEA !important;   
+}
+
+/* Taille des boutons Ajouter un commentaire, Editer et Autres actions*/
+.lotusui30 a.lotusAction {
+    font-size: 0.9em !important;
 }
