--- a/Inklusif2/com.css
+++ b/Inklusif2/com.css
@@ -4,7 +4,8 @@
 .communities-widget-appearance .lotusui30 div:not(#profilePaneLeft):not(#profilePaneRight):not(#profileBody):not(#tabsWidget1_widgetId_container) > .lotusWidget2 .lotusTable h4 a {
     color: #FF7010 !important;
     font-size: 16px !important;
-    font-weight: bold !important;
+    /* modification 05/06/2018 */
+    /* font-weight: bold !important; */
 }
 
 /* Taille font lien d'actions */
