--- a/search_agefiph/search.css
+++ b/search_agefiph/search.css
@@ -3,8 +3,15 @@
     border-left: 4px solid #EB6608 !important;
 }
 
+/* Texte de recherche */
+.search-global-search-restyle .lotusui30 .icSearchResultsPage .lconnSearchHeader .lotusSearch .icSearchInputBox input {
+   color: #1B4859 !important;
+   font-weight: bold !important;
+}
 
 /* Barre de recherche */
 .search-global-search-restyle .lotusui30 .icSearchResultsPage .lconnSearchHeader .lotusSearch {
     border-bottom-color: #EB6608 !important;
 }
+
+
