--- a/search_agefiph/search.css
+++ b/search_agefiph/search.css
@@ -48,6 +48,14 @@
 	border-left-color: #FFF !important;
 }
 
+/* Recherche avancée - Astuce */
+.lotusui30 .lotusTitleBar2 .lotusHeading .lotusText, 
+.lotusui30 .lotusColLeft .lotusInfoBox, 
+.lotusui30 .lotusColLeft .lotusInfoBox h3 {
+	color: #FFFFFF !important;
+}
+
+
 /* Recherche avancée - select clear all */
 .lotusui30 a {
 	color: #EB6608 !important;
