--- a/search_agefiph/search.css
+++ b/search_agefiph/search.css
@@ -8,9 +8,9 @@
 .lotusui30 .lotusMenu li.lotusSelected a:focus,
 .lotusui30 .lotusMenu li a,
 .lotusui30 .lotusMenu li a:hover,
-.lotusui30 .lotusSection h2
-{
-		color: #FFFFFF !important;
+.lotusui30 .lotusSection h2,
+.lotusui30_body {
+	color: #FFFFFF !important;
 }
 
 /* Texte de recherche */
