--- a/search_agefiph/search.css
+++ b/search_agefiph/search.css
@@ -16,7 +16,6 @@
 .lotusui30 .lotusMenu li a,
 .lotusui30 .lotusMenu li a:hover,
 .lotusui30 .lotusSection h2,
-.lotusui30_body,
 .lotusui30_layout .lotusColLeft a {
 	color: #FFFFFF !important;
 }
@@ -57,6 +56,12 @@
 .lconnSearchResults h4 a b {
 	font-weight: bold !important;
 	font-size: 14px !important;
+}
+
+/* Precent suivant barre recherche */
+.search-global-search-restyle .lotusui30 .icSearchResultsPage .lconnSearchResults .icPagination .lotusFirst,
+.search-global-search-restyle .lotusui30 .icSearchResultsPage .lconnSearchResults .icPagination .icnext {
+	color: #1B4859 !important;
 }
 
 /* Paging */
