--- a/search_agefiph/search.css
+++ b/search_agefiph/search.css
@@ -112,17 +112,19 @@
 
 /* Recherche avancée - Astuce */
 .lotusui30 .lotusTitleBar2 .lotusHeading .lotusText, 
+.lotusui30 .lotusColLeft .lotusInfoBox,
 .lotusui30 .lotusColLeft .lotusInfoBox h3 {
 	color: #FFFFFF !important;
 }
 
-.lotusui30 .lotusColLeft .lotusInfoBox {
-	color: #708090 !important;
-}	
+.lotusui30 .lotusColLeft .lotusInfoBox h3 {
+	border-bottom-color: #1B4859 !important;
+	background-color: #708090 !important;
+}
 
 .lotusui30 .lotusColLeft .lotusInfoBox {
-	background-color: #1B4859 !important;
 	border: 1px solid #1B4859 !important;
+	background-color: #708090 !important;
 }	
 
 /* Recherche avancée - bouton rechercher */
